# simple_ignition_ros2

./: .gitmodules  README.md
sim_action_server/: CMakeLists.txt  package.xml
sim_action_server/include/: sim_action_server.hpp
sim_action_server/src/: sim_action_server.cpp
sim_recorder/sim_recorder/: proc_monitor.py  run_recording.py
sim_spawner/: setup.py
sim_spawner/sim_spawner/: gazebo_spawner.py  gazebo_throw_spawner.py  ign_cli_models.py  spawner.py  throw_spawner.py
simple_arm/: package.xml  setup.cfg  setup.py
simple_arm/config/: move_group.rviz  panda_ros_controllers.yaml
simple_arm/launch/: collision.launch.py  collision_gazebo.launch.py  ign_place.launch.py  ign_throw.launch.py  ign_throw_moveit.launch.py  moveit_controller.launch.py  moveit_ign.launch.py  panda.launch.py  prestart_moveit.launch.py  run_move_group.launch.py  stack_cubes.launch.py  throw_collision.launch.py  throw_cubes.launch.py  throw_moveit_controller.launch.py
simple_arm/urdf/: panda.ros2_control.xacro  panda.urdf.xacro  panda_arm_hand.urdf  panda_gazebo.urdf.xacro  panda_hand.ros2_control.xacro  panda_ign.sdf  panda_ign.urdf
simple_arm/worlds/: empty.sdf  panda_place.sdf  panda_throw.sdf
simple_arm_control/: CMakeLists.txt  package.xml
simple_arm_control/include/: moveit.hpp  simple_moveit.hpp
simple_arm_control/src/: moveit_collision.cpp  moveit_controller.cpp  moveit_ign.cpp  moveit_throw_controller.cpp  prestart_moveit.cpp  simple_moveit.cpp  throw_ign.cpp
simple_move_group/: CMakeLists.txt  package.xml
simple_move_group/launch/: run_move_group.launch.py
