<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_action_server</name>
  <version>1.0.0</version>
  <description>Action server wrapper to remove needlessly repeating code</description>
  <maintainer email="2330834a@student.gla.ac.uk">Florent Audonnet</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>control_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
