<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_arm</name>
  <version>1.0.0</version>
  <description>Run a pick and place task and a throw task on Ignition and Gazebo</description>
  <maintainer email="2330834a@student.gla.ac.uk">Florent Audonnet</maintainer>
  <license>BSD 3-Clause License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros_ign</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
    <!-- This line forces the model to be added to the path for gazebo -->
    <gazebo_ros gazebo_model_path="/opt/ros/foxy/share/moveit_resources_panda_description/.."/> 

  </export>
</package>
