<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_move_group</name>
  <version>2.1.0</version>
  <description>Demo launch file for running a MoveGroup setup</description>
  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>
  <maintainer email="2330834a@student.gla.ac.uk">Florent Audonnet</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>moveit_common</build_depend>

  <depend>moveit_ros_planning_interface</depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros-foxy-ros2-control</exec_depend>
  <exec_depend>ros-foxy-ros2-controllers</exec_depend>
  <exec_depend>ros-foxy-gripper-controllers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
